src/objects/Listing_Unit__c.object
<CustomObject>
    <description>Used to track historical information of units as they related to listings (a snapshot in time)</description>
    <fields>
        <fullName>AMI_Percent__c</fullName>
        <label>AMI Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AMI_chart_type__c</fullName>
        <label>AMI chart type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AMI_Chart_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMI_chart_year__c</fullName>
        <label>AMI chart year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMR_Rent_Monthly__c</fullName>
        <label>BMR Rent Monthly</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Listing__c</fullName>
        <label>Listing</label>
        <referenceTo>Listing__c</referenceTo>
        <relationshipLabel>Listing Units</relationshipLabel>
        <relationshipName>Listing_Units</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Priority_Grouping__c</fullName>
        <description>Displays the grouping where the Priority belongs, in order to be displayed on the front end. If a new Priority Type is added to the list, it needs to be added to this formula as well or it will default to &quot;Other&quot;</description>
        <formula>CASE(TEXT(Priority_Type__c), &apos;Vision impaired&apos;, &apos;Communication&apos;, &apos;Mobility impaired&apos;, &apos;Mobility&apos;, &apos;Hearing impaired&apos;, &apos;Communication&apos;,&apos;Hearing/Vision impaired&apos;, &apos;Communication&apos;, &apos;Veteran&apos;, &apos;Other&apos;, &apos;Senior&apos;, &apos;Other&apos;, &apos;Developmental disabilities&apos;, &apos;Other&apos;, &apos;&apos;)</formula>
        <label>Priority Grouping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Type__c</fullName>
        <label>Priority Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Priority</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rent_multiple__c</fullName>
        <label>Rent multiple</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rent_percent_of_income__c</fullName>
        <label>Rent percent of income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reserved_Type__c</fullName>
        <label>Reserved Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Priority</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Occupied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <referenceTo>Unit__c</referenceTo>
        <relationshipLabel>Listing Units</relationshipLabel>
        <relationshipName>Listing_Units</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>isReservedCommunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reserved community?</label>
        <type>Checkbox</type>
    </fields>
    <label>Listing Unit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Listing_Units_Details</fullName>
        <columns>NAME</columns>
        <columns>Listing__c</columns>
        <columns>Unit__c</columns>
        <columns>AMI_chart_type__c</columns>
        <columns>AMI_chart_year__c</columns>
        <columns>AMI_Percent__c</columns>
        <columns>BMR_Rent_Monthly__c</columns>
        <columns>Priority_Grouping__c</columns>
        <columns>isReservedCommunity__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Listing Units Details</label>
    </listViews>
    <nameField>
        <displayFormat>LU-{0000000}</displayFormat>
        <label>Listing Unit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Listing Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>